<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EmoTracker</string>
    <string name="title_section1">События</string>
    <string name="title_section2">Показатели</string>
    <string name="title_section3">Настройки</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_connect">Подключить устройство</string>
    <string name="action_settings">Settings</string>

    <string name="no_bluetooth_message">Bluetooth недоступен на устройстве</string>

    <string name="bluetooth_connecting_message">Подключаем устройство</string>

    <string name="pulse_hint">Пульс</string>
    <string name="stress_hint">Стресс (баллы)</string>
    <string name="activity_hint">Активность</string>
    <string name="steps_hint">Шаги</string>
    <string name="register_title">Спасибо что согласились учавствовать в этом тестировании. Полученные результаты будут содействовать развитию методов изучения эмоционального восприятия. Ваш вклад в этот процесс очень важен для нашей команды.</string>
    <string name="enter_login">Введите Логин</string>
    <string name="enter_name">Фамилию и имя</string>
    <string name="enter_age">Возраст</string>
    <string name="enter_gender">Пол</string>
    <string name="register">Регистрация</string>
    <string name="go">Далее</string>
    <string name="device_is_ok">Статус: устройство на руке</string>
    <string name="device_is_bad">Статус: устройство отключено</string>
    <string name="record">Запись события</string>
    <string name="start">Старт</string>
    <string name="stop">Стоп</string>
    <string name="email">E-mail</string>

    <string name="preferences_filename">emo_preferences</string>
    <string name="power_off">Отключиться</string>
    <string name="pulse_threshold">Пороги по пульсу:</string>
    <string name="stress_threshold">Пороги по стрессу:</string>
    <string name="step_threshold">Пороги по шагам:</string>
    <string name="activity_threshold">Пороги по активности:</string>

    <string name="date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="app_date_format">HH:mm:ss</string>
    <string name="please_go_register">Пожалуйста пройдите регистрацию</string>

    <string name="press_go">Регистрация пройдена успешно, нажмите Далее</string>
    <string name="user_event">Событие пользователя</string>
    <string name="event_name">Название события</string>
    <string name="comment">Комментарий</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>

    <string-array name="gender_array">
        <item>Пол</item>
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>

</resources>
