<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/user_event"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

            <TextView
                android:id="@+id/eventLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Продолжительность: "
                android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

            <EditText
                android:id="@+id/eventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_name"/>

            <Gallery
                android:id="@+id/gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Gallery>

            <EditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment"/>


        </LinearLayout>

        <Button
            android:id="@+id/okButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="OK"
            android:background="@drawable/button_selector"/>

        <TextView
            android:id="@+id/deviceState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_is_ok"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="#AFEEEE"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:padding="@dimen/activity_horizontal_margin"
            android:gravity="center"/>

    </LinearLayout>

</ScrollView>